--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
 body{
-    font-type :'Roboto';
-    margin: 4px;
+    font-family : -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 20px;
 }
 .part1 {
     background-image: url('images/image2.png');
-    height: 400px;
+    height: 370px;
     background-position: center;
     background-size: cover;
 }
@@ -16,7 +16,6 @@ body{
     display: inline-flex;
     flex-direction: column;
     text-decoration: bolder;
-    font-family: 'roboto';
     font-weight: bolder;
     position: relative;
     padding: 0;
@@ -30,7 +29,7 @@ body{
     height: 20px;
     font-size: 15px;
 }
-.links{
+.links {
     float: right;
     padding: 10px; 
     margin-top: 2px;
@@ -38,14 +37,13 @@ body{
     flex-direction: row-reverse;
     justify-content: right;
     text-decoration: solid ;
-    font-family: 'roboto';
     font-weight: bolder;
 }
 .links > nav > #home{
     color: #F19201 ;
 }
 .links > nav > #moringa {
-    background-color: #F19201 ;
+    background-color: #F19201;
     color: white;
     text-align: center;
 }
@@ -58,5 +56,11 @@ nav {
     color: white;
     margin: 10px;
     padding: 25px;
-    font-style: 'roboto';
+}
+.links > .order > p {
+    color: white;
+    text-align: center;
+    height: 10px;
+    width: 100px;
+    margin: 50px; margin-top: 1%;
 }
