--- a/index.css
+++ b/index.css
@@ -1,24 +1,23 @@
 body{
-    font-family : -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family : 'Roboto' sans-serif;
     margin: 20px;
+    background-color: rgba(216, 216, 214, 0.788);
+    height: 3000px;
+
 }
 .part1 {
     background-image: url('images/image2.png');
-    height: 370px;
+    height: 450px;
     background-position: center;
     background-size: cover;
 }
-.part1 img{
-    margin: 1px;
-}
-.part1 p {
+
+.part1 h3{
     color: #F19201;
-    display: inline-flex;
-    flex-direction: column;
+    display: inline-block;
+    flex-direction: row;
     text-decoration: bolder;
     font-weight: bolder;
-    position: relative;
-    margin:0%; margin-top: 1%;
 }
 .links a {
     margin: 2px;
@@ -56,15 +55,16 @@ nav {
     margin: 10px;
     padding: 25px;
 }
-.part1 .order {
+.part1 .order p {
     color: white;
+    text-decoration: solid;
     background-color: #F19201;
     border: solid 10px #F19201; 
     text-align: center;
-    height: 20px;
+    height: 10px;
     width: 100px;
-    margin: 30px; margin-top: 1%;
-    padding: 10px; 
+    margin: 40px; 
+    padding: 5px; 
     
 
 }
@@ -76,10 +76,11 @@ nav {
 .part2 h2{
     color: #F19201;
 }
-.part2 p{
+.part2 p {
     font-style: italic;
-    margin: 10%; margin-top: 3%;
-    width: 75%;
+   margin: 2%; margin-top: 3%;
+    width: 63%;
+    padding-left: 17%;
 }
 .part2 .containers {
     display: flex;
@@ -99,9 +100,9 @@ nav {
     font-size: larger;
     font-weight: bolder;
     color: white;
-    border-radius: 100%; 
-    padding: 1%;
-  
+    border-radius: 50%; border-bottom: 5%;
+    width: 50px;
+    height: 50px;
 }
 .part2 .containers .two{
     background-color: white;
@@ -138,4 +139,32 @@ nav {
     border-radius: 50%; border-bottom: 5%;
     width: 50px;
     height: 50px;
+}
+.part3 {
+    height: 200px;
+    text-align: center;
+    content: "";
+    display: flex;
+    clear: both;
+}
+.part3 .column1 img{
+    float: left;
+    width: 100%;
+    object-fit: cover;
+    padding: 10px;
+    height: 195%; 
+}
+.part3 .column2{
+    float: right;
+    width: 100%;
+    padding: 10px; 
+    height: 190%; 
+    object-fit: cover;
+    text-align: center;
+    color: aliceblue;
+    background-color: black;
+}
+.part3 .column2 h1{
+    font-size: 50px;
+    text-decoration: underline ;
 }
