--- a/index.css
+++ b/index.css
@@ -165,6 +165,17 @@ nav {
     background-color: black;
 }
 .part3 .column2 h1{
+    align-items: center;
     font-size: 50px;
-    text-decoration: underline ;
+    
+}
+.part3 > .column2 > h1:after {
+    content: "";
+    text-decoration: underline;
+  width: 50%;
+  background-color: rgb(255, 255, 255);
+  position: absolute;
+  bottom: -.5em;
+  left: 50%;
+  transform: translate(-50%);
 }
