--- a/index.css
+++ b/index.css
@@ -1,7 +1,6 @@
 @import url('Downloads/Roboto');
 body{
-    font-family : 'Roboto' sans-serif;
-    margin: 20px;
+    font-family : -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: rgba(216, 216, 214, 0.788);
     height: 3000px;
 
@@ -11,6 +10,12 @@ body{
     height: 450px;
     background-position: center;
     background-size: cover;
+    width: 100%;
+}
+.part1 img{
+    height: 30px;
+    width: 30px;
+    margin-left: 50px;
 }
 
 .part1 h3{
@@ -21,17 +26,15 @@ body{
     font-weight: bolder;
 }
 .links a {
-    margin: 2px;
+    margin: 1px;
     color: white; padding-right: 25px;
     text-decoration: none; 
     flex-direction: column;
-    height: 20px;
     font-size: 15px;
 }
 .links {
     float: right;
-    padding: 10px; 
-    margin-top: 2px;
+    padding: 1px; 
     display: flex;
     flex-direction: row-reverse;
     justify-content: right;
@@ -49,6 +52,7 @@ body{
 }
 nav {
     display: block; 
+    min-height: 1%;
     background-color: rgba(0, 0, 0, 0.5);
     margin: 0 auto;
     padding: 10px 0;
@@ -269,9 +273,27 @@ nav {
 
 .part5 {
     background-image: url('images/image8.png');
-    height: 350px;
+    height: 300px;
     padding: 5px;
     background-position: center;
-    background-size: contain;
-   
+    background-size: contain; 
+    line-height: 50px;
+    text-align: center;
+    color: white;
+}
+footer{
+line-height: 170px;
+}
+.button{
+    border: 1px solid white;
+    color: white;
+    font-weight: bolder;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 10px;
+    padding: 10px;
+    width: 150px;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+.part5 p{
+    font-style: italic;
 }
