--- a/index.css
+++ b/index.css
@@ -2,7 +2,8 @@
 body{
     font-family : -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: rgba(216, 216, 214, 0.788);
-    height: 3000px;
+    height: 1500px;
+    width: auto;
 
 }
 .part1 {
@@ -10,7 +11,6 @@ body{
     height: 450px;
     background-position: center;
     background-size: cover;
-    width: 100%;
 }
 .part1 img{
     height: 30px;
@@ -62,6 +62,7 @@ nav {
     color: white;
     margin: 10px;
     padding: 25px;
+    line-height: 50px;
 }
 .part1 .order p {
     color: white;
